<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/bg_item_purchase_point_video"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_purchase_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/purchase_title_header"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_pos_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase_title_tail"
                android:textColor="#ff444444"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_point_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_point2"
            android:text="@string/point_number"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_buy"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_btn_pink"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>