<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:padding="@dimen/common_dialog_padding">

            <LinearLayout
                android:id="@+id/dialogTextLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialogText"
                    android:layout_width="wrap_content"
                    android:text="@string/dialog_2shot_first_time_title"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/dialog_title_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dialogTextSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/dialog_2shot_first_time_sub"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialogImageLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/yesImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/btn_red"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:src="@drawable/ico_mic_on"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_first_time_accept"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/dialog_title_size"
                        android:textStyle="bold"/>
                </LinearLayout>

                <Button
                    android:id="@+id/noImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_cancel_grey"
                    android:text="@string/dialog_first_time_cancel"
                    android:textColor="@color/dialog_grey"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:buttonTint="@color/dialog_grey"
                android:theme="@style/MyCheckBox"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dialog_2shot_first_time_not_show_again"
                android:textColor="@color/dialog_grey"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
