<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#483b52"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editChatText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="36dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:gravity="bottom"
        android:maxLines="3"
        android:inputType="text|textMultiLine|textCapSentences"
        android:ems="10"
        android:hint="@string/edit_chat_text_hint"
        android:layout_weight="1"
        style="@style/EditTextStyle" />

    <FrameLayout
        android:id="@+id/chatSendImage"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_btn_2shot_yellow"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_send"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/twoShotRequestImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_btn_2shot_indigo"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_mic_on"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_call_video"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/title_btn_request_2shot"
                android:textSize="10sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/callRequestImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_btn_2shot_yellow"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_call_video"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_btn_request_call"
                android:textSize="8sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/two_shot_control_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/micImage"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ico_mic_on"
            android:scaleType="center"/>

        <ImageView
            android:id="@+id/videoImage"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ico_video_on"
            android:scaleType="center"/>

        <ImageView
            android:id="@+id/twoShoCancelImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/btn_2shotclear"/>

    </LinearLayout>


</LinearLayout>
